--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/sapinspys/node-db4-challenge/issues"
   },
-  "homepage": "https://github.com/sapinspys/node-db4-challenge#readme"
+  "homepage": "https://github.com/sapinspys/node-db4-challenge#readme",
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "helmet": "^3.19.0",
+    "install": "^0.13.0",
+    "knex": "^0.19.0",
+    "sqlite3": "^4.0.9"
+  }
 }
